# ChangeLog for dev-perl/Graph
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Graph/ChangeLog,v 1.45 2008/07/03 09:42:01 tove Exp $

  03 Jul 2008; Torsten Veller <tove@gentoo.org> Graph-0.84.ebuild:
  Removed Heap dependency to fix #230539.

  13 Jan 2008; Tobias Scherbaum <dertobi123@gentoo.org> Graph-0.84.ebuild:
  ppc. stable

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Graph-0.84.ebuild:
  amd64 stable

  06 Dec 2007; Raúl Porcel <armin76@gentoo.org> Graph-0.84.ebuild:
  alpha/ia64/sparc/x86 stable

*Graph-0.84 (19 Oct 2007)

  19 Oct 2007; Christian Hartmann <ian@gentoo.org> +Graph-0.84.ebuild:
  Version bump

  10 Jul 2007; Raúl Porcel <armin76@gentoo.org> Graph-0.81.ebuild:
  alpha/ia64/x86 stable

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org> Graph-0.81.ebuild:
  Latest dev-perl/Heap breaks Graph in tests - hard-depping older Heap. See rt
  #26943 to track this.

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org> Graph-0.81.ebuild:
  ppc stable

  10 Apr 2007; Michael Cummings <mcummings@gentoo.org> Graph-0.81.ebuild:
  sparc stable

  09 Apr 2007; Michael Cummings <mcummings@gentoo.org> Graph-0.81.ebuild:
  Marking stable amd64

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Graph-0.80.ebuild:
  Stable on x86, bug #169152.

*Graph-0.81 (06 Feb 2007)

  06 Feb 2007; Michael Cummings <mcummings@gentoo.org> +Graph-0.81.ebuild:
  Version bump

  22 Jan 2007; Bryan Østergaard <kloeri@gentoo.org> Graph-0.80.ebuild:
  Stable on Alpha + IA64.

  11 Jan 2007; Gustavo Zacarias <gustavoz@gentoo.org> Graph-0.80.ebuild:
  Stable on sparc

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org> Graph-0.67.ebuild,
  Graph-0.69.ebuild, Graph-0.80.ebuild:
  Marking amd64 stable

*Graph-0.80 (11 Nov 2006)

  11 Nov 2006; Michael Cummings <mcummings@gentoo.org> +Graph-0.80.ebuild:
  Version bump

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org> Graph-0.67.ebuild,
  Graph-0.69.ebuild: