@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Heap
-# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Heap/ChangeLog,v 1.27 2007/08/09 14:52:54 dertobi123 Exp $
+# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Heap/ChangeLog,v 1.28 2008/07/03 09:56:08 tove Exp $
+
+  03 Jul 2008; Torsten Veller <tove@gentoo.org> -Heap-0.71.ebuild:
+  Cleaning
 
   09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org> Heap-0.80.ebuild:
   Stable on ppc.
