@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Graph
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Graph/ChangeLog,v 1.45 2008/07/03 09:42:01 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Graph/ChangeLog,v 1.46 2008/07/03 09:53:58 tove Exp $
+
+  03 Jul 2008; Torsten Veller <tove@gentoo.org> -Graph-0.67.ebuild,
+  -Graph-0.69.ebuild, -Graph-0.80.ebuild, -Graph-0.81.ebuild:
+  Cleaning
 
   03 Jul 2008; Torsten Veller <tove@gentoo.org> Graph-0.84.ebuild:
   Removed Heap dependency to fix #230539.
